--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+bin/
 
 # Created by https://www.gitignore.io/api/go,linux,intellij+all
 # Edit at https://www.gitignore.io/?templates=go,linux,intellij+all
