--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   lint:
+    runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: "Download linter"
-        uses: docker://golang:1.13-stretch
         run: sh refresh-dev-env.sh
       - name: "Run linter"
-        uses: docker://golang:1.13-stretch
         run: sh linter.sh
